--- a/app/src/main/res/layout/activity_monitor1.xml
+++ b/app/src/main/res/layout/activity_monitor1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity_MonitorBeban">
+    tools:context=".activity_Monitor1">
 
     <!-- Bottom Navigation -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -30,35 +30,20 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="konsumsi "
-        android:textColor="@color/blue"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/view_monitor"
-        app:layout_constraintEnd_toEndOf="@+id/view_monitor"
-        app:layout_constraintHorizontal_bias="0.118"
-        app:layout_constraintStart_toStartOf="@+id/view_monitor"
-        app:layout_constraintTop_toTopOf="@+id/view_monitor"
-        app:layout_constraintVertical_bias="0.287" />
-
-    <TextView
         android:id="@+id/textview_biaya2"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Rp22.236,48"
         android:textAlignment="textEnd"
         android:textColor="@color/blue"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/view_monitor"
         app:layout_constraintEnd_toEndOf="@+id/view_monitor"
-        app:layout_constraintHorizontal_bias="0.829"
+        app:layout_constraintHorizontal_bias="0.848"
         app:layout_constraintStart_toStartOf="@+id/view_monitor"
         app:layout_constraintTop_toTopOf="@+id/view_monitor"
-        app:layout_constraintVertical_bias="0.269" />
+        app:layout_constraintVertical_bias="0.278" />
 
     <TextView
         android:id="@+id/textView7"
@@ -73,16 +58,31 @@
         app:layout_constraintTop_toTopOf="@+id/view_monitor"
         app:layout_constraintVertical_bias="0.261" />
 
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="konsumsi"
+        android:textColor="@color/blue"
+        android:textSize="14sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/view_monitor"
         app:layout_constraintEnd_toEndOf="@+id/view_monitor"
-        app:layout_constraintHorizontal_bias="0.116"
+        app:layout_constraintHorizontal_bias="0.117"
         app:layout_constraintStart_toStartOf="@+id/view_monitor"
         app:layout_constraintTop_toTopOf="@+id/view_monitor"
-        app:layout_constraintVertical_bias="0.108"
+        app:layout_constraintVertical_bias="0.286" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintBottom_toBottomOf="@+id/view_monitor"
+        app:layout_constraintEnd_toEndOf="@+id/view_monitor"
+        app:layout_constraintHorizontal_bias="0.185"
+        app:layout_constraintStart_toStartOf="@+id/view_monitor"
+        app:layout_constraintTop_toTopOf="@+id/view_monitor"
+        app:layout_constraintVertical_bias="0.155"
         app:srcCompat="@drawable/ic_electric_monitorbeban" />
 
     <TextView
@@ -413,29 +413,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Total Daya"
-        android:textSize="26sp"
         android:textColor="@color/white"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/view_monitor"
         app:layout_constraintEnd_toEndOf="@+id/view_monitor"
         app:layout_constraintStart_toStartOf="@+id/view_monitor"
         app:layout_constraintTop_toTopOf="@+id/view_monitor"
-        app:layout_constraintVertical_bias="0.053" />
+        app:layout_constraintVertical_bias="0.122" />
 
     <TextView
         android:id="@+id/textview_totaldaya"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:text="10,66 kWh"
+        android:text="1,66 kWh"
         android:textColor="@color/white"
-        android:textSize="45sp"
+        android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/view_monitor"
         app:layout_constraintEnd_toEndOf="@+id/view_monitor"
         app:layout_constraintHorizontal_bias="0.813"
         app:layout_constraintStart_toStartOf="@+id/view_monitor"
         app:layout_constraintTop_toTopOf="@+id/view_monitor"
-        app:layout_constraintVertical_bias="0.107" />
+        app:layout_constraintVertical_bias="0.159" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
