--- a/app/src/main/res/layout/activity_monitorbeban.xml
+++ b/app/src/main/res/layout/activity_monitorbeban.xml
@@ -19,13 +19,27 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
+        android:id="@+id/textView13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reset Data"
+        android:textColor="@color/lightblue"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@id/view_monitor"
+        app:layout_constraintEnd_toEndOf="@+id/view_monitor"
+        app:layout_constraintHorizontal_bias="0.886"
+        app:layout_constraintStart_toStartOf="@+id/view_monitor"
+        app:layout_constraintTop_toTopOf="@+id/view_monitor"
+        app:layout_constraintVertical_bias="0.977" />
+
+    <TextView
         android:id="@+id/textview_jam"
-        android:layout_width="200dp"
+        android:layout_width="175dp"
         android:layout_height="wrap_content"
         android:text="1 Jam 20 Menit 59 Detik"
         android:textAlignment="textEnd"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@id/view_monitor"
         app:layout_constraintEnd_toEndOf="@+id/view_monitor"
         app:layout_constraintHorizontal_bias="0.867"
         app:layout_constraintStart_toStartOf="@+id/view_monitor"
@@ -34,13 +48,12 @@
 
     <TextView
         android:id="@+id/textview_harga"
-        android:layout_width="200dp"
+        android:layout_width="175dp"
         android:layout_height="wrap_content"
         android:text="10.000"
         android:textAlignment="textEnd"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@id/view_monitor"
         app:layout_constraintEnd_toEndOf="@+id/view_monitor"
         app:layout_constraintHorizontal_bias="0.862"
         app:layout_constraintStart_toStartOf="@+id/view_monitor"
@@ -49,14 +62,14 @@
 
     <TextView
         android:id="@+id/textview_biaya"
-        android:layout_width="200dp"
+        android:layout_width="175dp"
         android:layout_height="wrap_content"
         android:text="Rp10.000"
         android:textAlignment="textEnd"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/view_monitor"
         app:layout_constraintEnd_toEndOf="@+id/view_monitor"
         app:layout_constraintHorizontal_bias="0.867"
         app:layout_constraintStart_toStartOf="@+id/view_monitor"
@@ -65,12 +78,12 @@
 
     <TextView
         android:id="@+id/textview_kwh"
-        android:layout_width="200dp"
+        android:layout_width="175dp"
         android:layout_height="wrap_content"
         android:text="1,8 kWh"
         android:textAlignment="textEnd"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@id/view_monitor"
         app:layout_constraintEnd_toEndOf="@+id/view_monitor"
         app:layout_constraintHorizontal_bias="0.862"
         app:layout_constraintStart_toStartOf="@+id/view_monitor"
@@ -112,26 +125,26 @@
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:text="Waktu Penggunaan"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@id/view_monitor"
         app:layout_constraintEnd_toEndOf="@+id/view_monitor"
-        app:layout_constraintHorizontal_bias="0.154"
+        app:layout_constraintHorizontal_bias="0.151"
         app:layout_constraintStart_toStartOf="@+id/view_monitor"
         app:layout_constraintTop_toTopOf="@+id/view_monitor"
         app:layout_constraintVertical_bias="0.654" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView2"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:text="Tarif per kWh"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Total Daya"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@id/view_monitor"
         app:layout_constraintEnd_toEndOf="@+id/view_monitor"
-        app:layout_constraintHorizontal_bias="0.131"
+        app:layout_constraintHorizontal_bias="0.128"
         app:layout_constraintStart_toStartOf="@+id/view_monitor"
         app:layout_constraintTop_toTopOf="@+id/view_monitor"
-        app:layout_constraintVertical_bias="0.734" />
+        app:layout_constraintVertical_bias="0.692" />
 
     <TextView
         android:id="@+id/textView9"
@@ -140,32 +153,33 @@
         android:text="Biaya"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@id/view_monitor"
         app:layout_constraintEnd_toEndOf="@+id/view_monitor"
-        app:layout_constraintHorizontal_bias="0.131"
+        app:layout_constraintHorizontal_bias="0.128"
         app:layout_constraintStart_toStartOf="@+id/view_monitor"
         app:layout_constraintTop_toTopOf="@+id/view_monitor"
         app:layout_constraintVertical_bias="0.781" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textView3"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:text="Total Daya"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Tarif per kWh"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@id/view_monitor"
         app:layout_constraintEnd_toEndOf="@+id/view_monitor"
-        app:layout_constraintHorizontal_bias="0.131"
+        app:layout_constraintHorizontal_bias="0.128"
         app:layout_constraintStart_toStartOf="@+id/view_monitor"
         app:layout_constraintTop_toTopOf="@+id/view_monitor"
-        app:layout_constraintVertical_bias="0.693" />
+        app:layout_constraintVertical_bias="0.734" />
 
     <ImageView
         android:id="@+id/btn_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/ic_baseline_arrow_back_24"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/view_monitor"
         app:layout_constraintEnd_toEndOf="@+id/view_monitor"
         app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toStartOf="@+id/view_monitor"
@@ -213,5 +227,17 @@
         app:layout_constraintTop_toTopOf="@+id/view_monitor"
         app:layout_constraintVertical_bias="0.479"
         app:srcCompat="@drawable/ic_electric_monitorbeban" />
+
+    <ImageView
+        android:id="@+id/btn_reset"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/view_monitor"
+        app:layout_constraintEnd_toEndOf="@+id/view_monitor"
+        app:layout_constraintHorizontal_bias="0.959"
+        app:layout_constraintStart_toStartOf="@+id/view_monitor"
+        app:layout_constraintTop_toTopOf="@+id/view_monitor"
+        app:layout_constraintVertical_bias="0.977"
+        app:srcCompat="@drawable/ic_reset" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
