--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,9 +5,11 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="blue">#5B5F97</color>
+    <color name="lightblue">#B2B6EE</color>
     <color name="red">#F06B6D</color>
     <color name="yellow">#FFC145</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#D9D9D9</color>
 </resources>
